i had made things add to the console

--- a/index.html
+++ b/index.html
@@ -11,12 +11,10 @@
         <!-- Your Javascript -->
         <script src="js/script.js"></script>
     </head>
-
     <body>
         <div class="container">
             <div class="row">
-                // Your HTML HERE
-                
+                <center> <input id = "input"><button id="button">click me</button></center>
                 
             </div>
         </div>
